choreo page updates

--- a/public/choreography/index.html
+++ b/public/choreography/index.html
@@ -53,6 +53,19 @@
         </div>
         <div class="choreo-box">
           <div class="copy">
+            <h4>skull</h4>
+            <h6>(2022)</h6>
+            <p>
+              Concept, choreography, and performance by Emily Hansel<br />
+              Music by Sophia Cotraccia<br />
+              Filmed by Colin Frederick
+            </p>
+            <p><i>skull </i>is a short dance film commissioned by Dance Thrill Fest, "an annual dance film festival curated by REYES Dance featuring short dance film works from local bay area artists exploring themes of horror, thrill, comedy and everything in between." It premiered on October 26th, 2022 at the Roxie Theater, San Francisco, CA.          </p>
+          </div>
+          <iframe class="visual" src="https://www.youtube.com/embed/yLoN1b8jCGU" height="240px" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="choreo-box">
+          <div class="copy">
             <h4>Four by Four</h4>
             <h6>(2022)</h6>
             <p>
@@ -87,8 +100,8 @@
           <div class="copy">
             <h4>Eight Whiskus</h4>
             <h6>(2021)</h6>
-            <p> 
-              Co-choreographed by Robin Dekkers and Emily Hansel<br />
+            <p>
+               Co-choreographed by Robin Dekkers and Emily Hansel<br />
               Performed by Emily Hansel<br />
               A site-specific dance for film co-choreographed with Robert Dekkers for Post:ballet which premiered virtually on January 7, 2021
             </p>
